--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4",
     "y-monaco": "^0.1.4",
     "y-webrtc": "^10.2.5",
+    "y-websocket": "^1.5.0",
     "yjs": "^13.6.7"
   },
   "scripts": {
